base/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer-route
spec:
  parentRefs:
    - name: cilium-gateway
  rules:
    - backendRefs:
        - name: adminer
          port: 80
